name:                line
version:             1.0.0.0
synopsis:            Haskell SDK for the LINE API
homepage:            https://github.com/noraesae/line
license:             BSD3
license-file:        LICENSE
author:              Jun
maintainer:          Jun <me@noraesae.net>
copyright:           (c) 2016 Jun <me@noraesae.net>
category:            Network
build-type:          Simple
cabal-version:       >=1.10
description:
  This package exports bindings to LINE APIs.
  .
  It provides the following features:
  .
  * Internal auth signature validator
  .
  * Webhook handled with handler function or WAI application
  .
  * Functions and types for <https://devdocs.line.me/en/#messaging-api LINE Messaging API>
  .
  For example usages, please see the
  <https://github.com/noraesae/line/tree/master/examples examples> directory.

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Line.Messaging.API
                       Line.Messaging.API.Types
                       Line.Messaging.Common.Types
                       Line.Messaging.Types
                       Line.Messaging.Webhook
                       Line.Messaging.Webhook.Types
                       Line.Messaging.Webhook.Validation
  build-depends:       base >= 4.7 && < 5
                     , wai
                     , http-types
                     , aeson
                     , bytestring
                     , text
                     , transformers
                     , cryptohash-sha256
                     , base64-bytestring
                     , time
                     , wreq
                     , lens
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings


test-suite line-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , line
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/noraesae/line
