name:                line
version:             2.1.0.1
synopsis:            Haskell SDK for the LINE API
homepage:            https://github.com/noraesae/line
license:             BSD3
license-file:        LICENSE
author:              Jun
maintainer:          Jun <me@noraesae.net>
copyright:           (c) 2016 Jun <me@noraesae.net>
category:            Network
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:
  README.md
  CHANGELOG.md
  examples/*.hs
description:
  This package exports bindings to LINE APIs.
  .
  It provides the following features:
  .
  * Internal auth signature validator
  .
  * Webhook handled with handler function, WAI application, or Scotty action
  .
  * Functions and types for <https://devdocs.line.me/en/#messaging-api LINE Messaging API>
  .
  For example usages, please see the
  <https://github.com/noraesae/line/tree/master/examples examples> directory.

library
  hs-source-dirs:      src
  ghc-options:         -Wall
  exposed-modules:     Line.Messaging.API
                       Line.Messaging.API.Types
                       Line.Messaging.Common.Types
                       Line.Messaging.Types
                       Line.Messaging.Webhook
                       Line.Messaging.Webhook.Types
                       Line.Messaging.Webhook.Validation
  build-depends:       base >= 4.8 && < 5
                     , wai >= 3.2.1.1
                     , http-types >= 0.9.1
                     , aeson >= 0.11.2.1
                     , bytestring >= 0.10.6.0
                     , text >= 1.2.2.1
                     , transformers >= 0.4.2.0
                     , cryptohash-sha256 >= 0.11.100.1
                     , base64-bytestring >= 1.0.0.1
                     , time >= 1.5.0.1
                     , http-conduit >= 2.1.11
                     , scotty >= 0.11.0
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings


test-suite line-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Line.Messaging.API.TypesSpec
                       Line.Messaging.API.TypesSpecHelper
                       Line.Messaging.WebhookSpec
                       Line.Messaging.Webhook.TypesSpec
                       Line.Messaging.Webhook.TypesSpecHelper
                       Line.Messaging.Webhook.ValidationSpec
  build-depends:       base
                     , line
                     , hspec
                     , hspec-wai
                     , QuickCheck
                     , quickcheck-instances
                     , text
                     , bytestring
                     , cryptohash-sha256
                     , base64-bytestring
                     , transformers
                     , scotty
                     , aeson
                     , raw-strings-qq
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010
  default-extensions:  OverloadedStrings

source-repository head
  type:     git
  location: https://github.com/noraesae/line
